Improve to set the version for the mongodbserver

--- a/docker/mongodb/Dockerfile
+++ b/docker/mongodb/Dockerfile
@@ -1,1 +1,7 @@
-FROM mongo:latest
+ARG MONGODB_VERSION
+
+FROM mongo:${MONGODB_VERSION}
+
+#COPY create-root_user.sh /docker-entrypoint-initdb.d/
+#RUN chmod +x /docker-entrypoint-initdb.d/create-root_user.sh 
+
