Setting limit to the container mongo  log

--- a/.env.example
+++ b/.env.example
@@ -28,9 +28,16 @@ MYSQL_ENTRYPOINT_INITDB_5_6=./docker/mysql_5_6/docker-entrypoint-initdb.d////
 
 ### MONGO #################################################
 MONGODB_CONTAINER_NAME=mongodb
+MONGODB_VERSION=4.0.10
+
 MONGODB_PATH_HOST=*set the path on real host*
 MONGODB_PATH_DUMPS_HOST=*set the path on real host*
+
 MONGODB_PORT=27017
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=*set your secret pass *
+
 
 ### NETWORK ###############################################
 NETWORK=docker_localhost
