--- a/docker/mongodb/Dockerfile
+++ b/docker/mongodb/Dockerfile
@@ -2,6 +2,6 @@ ARG MONGODB_VERSION
 
 FROM mongo:${MONGODB_VERSION}
 
-#COPY create-root_user.sh /docker-entrypoint-initdb.d/
-#RUN chmod +x /docker-entrypoint-initdb.d/create-root_user.sh 
-
+# Install selected extensions and other stuff
+RUN apt-get update \
+    && apt-get -y --no-install-recommends install ntp nano
